# embeddings

./: Dockerfile  README.md  embeddingsserver.py  pyproject.toml  run.sh
